macros/tests/fail/invalid_skip_attr.stderr
error: unexpected token in attribute
 --> tests/fail/invalid_skip_attr.rs:8:24
  |
8 |     #[wasm_export(skip = "string")]
  |                        ^
